- zpd demuxer
- fblpcm demuxer
- saud demuxer
- derfvideo demuxer
- covox demuxer
- ADPCM Procyon decoder
- sadl demuxer
- ADPCM THP/ADPCM NDSP encoders
- colordetect filter
- ffprobe -codec option
- EXIF Metadata Parsing
- ffprobe -codec option
- HDR10+ metadata passthrough when decoding/encoding with libaom-av1
- gfxcapture: Windows.Graphics.Capture based window/monitor capture


version 7.1:
- CLAP wrapper audio filter
- more truehd encoder channel-layouts
- LC3/LC3plus demuxer and muxer
- pad_vaapi, drawbox_vaapi filters
- vf_scale supports secondary ref input and framesync options
- vf_scale2ref deprecated
- qsv_params option added for QSV encoders
- dcblock audio filter
- amae audio filter
- stereofield audio filter
- ascale audio filter
- aquant audio filter
- fractional delay audio filter
- aiireq equalizer audio filter
- ADPCM IMA PDA decoder
- Playdate PDA demuxer
- QOA encoder and muxer
- xHE-AAC decoder
- removed DEC Alpha DSP and support code
- perlin video source filter
- YUV colorspace negotiation for codecs and filters, obsoleting YUVJ
- HVQM4 video decoder
- MotionCam RAW video decoder
- Digital Audio Tape demuxer
- removed ocv filter wrapper
- minor stream specifier syntax changes:
    - when matching by metadata (:m:<key>:<val>), the colon character
      in keys or values now has to be backslash-escaped
    - in optional maps (-map ....?) with a metadata-matching stream specifier,
      the value has to be separated from the question mark by a colon, i.e.
      -map ....:m:<key>:<val>:? (otherwise it would be ambiguous whether the
      question mark is a part of <val> or not)
    - multiple stream types in a single specifier (e.g. :s:s:0) now cause an
      error, as such a specifier makes no sense
- FFV1 parser

version 7.0:
- DXV DXT1 encoder
- LEAD MCMP decoder
- EVC decoding using external library libxevd
- EVC encoding using external library libxeve
- QOA decoder and demuxer
- aap filter
- aspace filter
- anrmse filter
- ambisonic filter