@@ -251,6 +251,7 @@ extern const FFOutputFormat ff_hls_muxer;
 extern const FFInputFormat  ff_hnm_demuxer;
 extern const FFInputFormat  ff_hvqm2_demuxer;
 extern const FFInputFormat  ff_hvqm4_demuxer;
+extern const FFInputFormat  ff_hxvs_demuxer;
 extern const FFInputFormat  ff_iamf_demuxer;
 extern const FFOutputFormat ff_iamf_muxer;
 extern const FFInputFormat  ff_ico_demuxer;
